--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Mm]emoryCaptures/
+GMTKGameJam2021/[Ll]ibrary/
+GMTKGameJam2021/[Tt]emp/
+GMTKGameJam2021/[Oo]bj/
+GMTKGameJam2021/[Bb]uild/
+GMTKGameJam2021/[Bb]uilds/
+GMTKGameJam2021/[Ll]ogs/
+GMTKGameJam2021/[Mm]emoryCaptures/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
