--- a/GMTKGameJam2021/Assets/Scripts/Gameplay/Gameplay.asmdef
+++ b/GMTKGameJam2021/Assets/Scripts/Gameplay/Gameplay.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:0a941e8cc01ad5c44b9822fc3d82c7bf",
-        "GUID:b0ae6c16be77ffb4c81921cf7114970c"
+        "GUID:b0ae6c16be77ffb4c81921cf7114970c",
+        "GUID:eba3bae5bb0dd6d4899ec95050e239a3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
